--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.18.3",
     "express": "~4.16.0",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.2.9",
+    "mongoose": "^5.2.8",
+    "multer": "^1.3.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "validator": "^10.4.0"
