--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "dateformat": "^3.0.3",
     "express": "~4.16.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.8",
