--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.8",
     "multer": "^1.3.1",
+    "npm": "^6.4.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "randomstring": "^1.1.5",
     "validator": "^10.4.0"
   }
 }
