--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "chart.js": "^2.7.2",
     "classnames": "^2.2.6",
+    "jsonwebtoken": "^8.4.0",
     "jwt-decode": "^2.2.0",
     "npm": "^6.4.1",
     "prop-types": "^15.6.2",
