--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "client": "npm start --prefix client",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
+  "engines": {
+    "nodes": "8.9.4"
+  },
   "author": "Kai Ferrall",
   "license": "ISC",
   "dependencies": {
